Use google fonts

--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -7,6 +7,7 @@
     width: calc(100% - 410px);
     margin: 20px 30px;
     font-weight: 500;
+    font-family: var(--header-font);
 }
 
 .drawing {
