--- a/src/components/logo/logo.module.css
+++ b/src/components/logo/logo.module.css
@@ -7,6 +7,7 @@
     height: var(--header-height);
     line-height: var(--header-height);
     margin: 0;
+    font-family: var(--header-font);
 }
 
 .link {
