--- a/src/components/nav/nav.module.css
+++ b/src/components/nav/nav.module.css
@@ -16,6 +16,7 @@
     text-decoration: none;
     font-weight: bold;
     font-size: 15px;
+    font-family: var(--header-font);
 }
 
 .nav a:hover {
