--- a/src/components/whatWeDo/whatWeDo.module.css
+++ b/src/components/whatWeDo/whatWeDo.module.css
@@ -11,3 +11,16 @@
     grid-template-columns: auto auto auto auto;
     grid-column-gap: 70px;
 }
+
+@media(max-width: 800px) {
+    .grid {
+        grid-template-columns: auto auto;
+        grid-column-gap: 50px;
+    }
+}
+
+@media(max-width: 500px) {
+    .grid {
+        grid-template-columns: auto;
+    }
+}
