CHANGE: Apply media queries to the contact form

--- a/src/components/letsTalk/letsTalk.module.css
+++ b/src/components/letsTalk/letsTalk.module.css
@@ -1,8 +1,9 @@
 .grid {
     display: grid;
-    grid-template-columns: 45% auto;
-    margin: 40px 30px;
+    grid-template-columns: 20% auto;
+    margin: 40px auto;
     grid-gap: 50px;
+    width: 60vw;
 }
 
 .grid h3 {
@@ -34,4 +35,22 @@
     border: 0;
     color: var(--brand-text);
     padding: 10px 15px;
+}
+
+@media (max-width: 500px) {
+    .grid {
+        display: inherit;
+        margin: 0;
+        width: 100%;
+    }
+
+    .grid h3 {
+        display: block;
+        text-align: center;
+    }
+
+    .grid form {
+        width: 80vw;
+        margin: 20px auto;
+    }
 }
