--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -11,9 +11,9 @@
 }
 
 .drawing {
-    margin: 15px 45px 5px 5px;
-    width: 200px;
-    height: 250px;
+    margin: 0 45px 5px 5px;
+    width: 120px;
+    height: 170px;
     float: right;
 }
 
