--- a/src/components/whatWeDo/whatWeDo.module.css
+++ b/src/components/whatWeDo/whatWeDo.module.css
@@ -2,14 +2,17 @@
     padding-top: calc(var(--header-height) + 10px);
     margin-top: calc(var(--header-height) * -1 + 10px);
     -webkit-background-clip: content-box;
-    background-clip: content-box;
+    background-clip: padding-box;
+    background-color: var(--brand-text);
+    padding-bottom: calc(var(--header-height) + 10px);
 }
 
 .grid {
-    margin: 50px 30px 0 30px;
+    margin: 0 30px;
     display: grid;
-    grid-template-columns: auto auto auto auto;
-    grid-column-gap: 70px;
+    grid-template-columns: 20% 20% 20% 20%;
+    grid-column-gap: calc(20%/3);
+    background: transparent;
 }
 
 @media(max-width: 800px) {
